--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI="mongodb://localhost:27017/app-gde"
+MONGO_URI="mongodb://127.0.0.1:27017/app-gde"
 JWT_SECRET="supersecretkey"
 PORT=3000
